fix too long links not breaking

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -61,8 +61,10 @@ h6 {
 p {
   font-size: 14px;
 }
-// typography override
-// end
+.page-content a {
+  white-space: normal;
+}
+// typography override end
 
 // EMPHASIZES
 em {
